added new apis